--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,30 @@
+
+
 body {
     background-color: #121212;
    color: #fff;
-
+   font-family: Spotify Mix Extrabold;
+   width: 100%;
+   height: 100vh;
+   margin: 0;
+   
 }
 
+main {
+    min-height: 100%;
+}
 
 .main-log-in-sheet {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: 60vw;
+    max-width: 500px;
+    min-width: 300px;
+   
+    margin: 0 auto;
+    padding-bottom: 2em;
     
 }
 
@@ -38,6 +53,9 @@ hr {
     
 }
 
+img {
+    float: left;
+}
 
 ul {
     list-style-type: none;
@@ -60,6 +78,8 @@ input {
     width: 400px;
 }
 
+
+
 #log-in-button {
     background-color: rgb(30, 215, 96);
     border-color: #121212;
@@ -78,3 +98,11 @@ input {
 a {
     color: #fff;
 }
+
+footer{
+    position:fixed;
+    bottom:0;
+    left:0;
+    text-align: center;
+    font-size: 12px;
+   }
