--- a/styles.css
+++ b/styles.css
@@ -4,27 +4,24 @@ body {
     background-color: #121212;
    color: #fff;
    font-family: Spotify Mix Extrabold;
-   width: 100%;
    height: 100vh;
    margin: 0;
-   
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   flex-wrap: nowrap;
 }
 
 main {
     min-height: 100%;
+    width: 100%;
 }
 
 .main-log-in-sheet {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    width: 60vw;
-    max-width: 500px;
-    min-width: 300px;
-   
-    margin: 0 auto;
-    padding-bottom: 2em;
+    margin-top: 1rem;
+    
+    
     
 }
 
@@ -33,76 +30,122 @@ main {
    
 }
 
-.easy-log-in-buttons  {
-    width: 35px;
-    height: 35px;
+.spotify-logo {
+    width: 30px;
+    height: 30px;
 }
+
+
+.logo-image {
+    width: 25px;
+    height: 25px;
+    float: left;
+}
+
+
 
 #sign-up-card {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-top: 50px;
+   
+}
+
+.continue-buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    
    
 }
 
 hr {
     width: 100%;
+    margin-top: 40px;
+    margin-bottom: 40px;
     
-}
-
-img {
-    float: left;
 }
 
 ul {
     list-style-type: none;
-    
+
 }
 
 button {
     background-color: #121212;
     color: #fff;
     border-radius: 30px;
+    
     width: 100%;
-    min-width: 400px;
     height: 45px;
    margin-top: 1rem;
    
 }
 
-input { 
-    height: 37px;
-    width: 400px;
+#log-in-button:hover {
+background-color: #3be477;
+height: 52px;
+
 }
 
+
+
+
+
+input { 
+    height: 37px;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.email-and-password {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.easy-log-in-buttons:hover {
+
+    border: 3px solid white;
+}
 
 
 #log-in-button {
     background-color: rgb(30, 215, 96);
     border-color: #121212;
     color: black;
-    height: 45px;
+    height: 49px;
     font-size: 15px;
     font-weight: bold;
+    margin-bottom: 25px;
 }
 
 
-.spotify-logo {
-    width: 35px;
-    height: 35px;
-}
 
 a {
     color: #fff;
 }
+a:hover {
 
+    color: rgb(30, 215, 96);
+
+}
 footer{
-    position:fixed;
+    position:absolute;
     bottom:0;
     left:0;
     text-align: center;
     font-size: 12px;
+   }
+
+   h1 { 
+    margin-top: 0;
    }
